<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.nzbhydra</groupId>
    <artifactId>nzbhydra2</artifactId>
    <packaging>pom</packaging>
    <version>8.9.1-SNAPSHOT</version>

    <modules>
        <module>shared</module>
        <module>other</module>
        <module>core</module>
        <module>tests</module>
        <module>releases</module>
    </modules>

    <scm>
        <connection>scm:git:git@github.com:theotherp/nzbhydra2.git</connection>
        <developerConnection>scm:git:git@github.com:theotherp/nzbhydra2.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>tools.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>3.1.5</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>2.5.3</version>
                <configuration>
                    <tagNameFormat>v@{project.version}</tagNameFormat>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.nzbhydra</groupId>
                <artifactId>github-release-plugin</artifactId>
                <version>3.0.0</version>
                <configuration>
                    <commitish>master</commitish>
                    <githubToken>${env.GITHUB_TOKEN}</githubToken>
                    <linuxAmd64Asset>${basedir}/releases/linux-amd64-release/target/nzbhydra2-${project.version}-amd64-linux.zip</linuxAmd64Asset>
                    <linuxArm64Asset>${basedir}/releases/linux-arm64-release/target/nzbhydra2-${project.version}-arm64-linux.zip</linuxArm64Asset>
                    <windowsAsset>${basedir}/releases/windows-release/target/nzbhydra2-${project.version}-windows.zip</windowsAsset>
                    <genericAsset>${basedir}/releases/generic-release/target/nzbhydra2-${project.version}-generic.zip</genericAsset>
                    <changelogYamlFile>${basedir}/core/src/main/resources/changelog.yaml</changelogYamlFile>
                    <changelogMdFile>${basedir}/changelog.md</changelogMdFile>

                    <windowsExecutable>${basedir}/releases/windows-release/include/NZBHydra2.exe</windowsExecutable>
                    <windowsConsoleExecutable>${basedir}/releases/windows-release/include/NZBHydra2 Console.exe</windowsConsoleExecutable>
                    <py3>${basedir}/other/wrapper/nzbhydra2wrapperPy3.py</py3>
                    <goWrapper>${basedir}/other/gowrapper/base/base.go</goWrapper>

                    <wrapperFile1>${basedir}/releases/windows-release/include/NZBHydra2 Console.exe</wrapperFile1>
                    <wrapperFile2>${basedir}/releases/windows-release/include/NZBHydra2.exe</wrapperFile2>
                    <wrapperFile3>${basedir}/other/wrapper/nzbhydra2wrapper.py</wrapperFile3>
                    <wrapperFile4>${basedir}/other/wrapper/nzbhydra2wrapperPy3.py</wrapperFile4>
                    <!--                    <wrapperFile6>${basedir}/releases/linux-arm64-release/include/executables/nzbhydra2</wrapperFile6>-->
                    <wrapperHashesJsonFile>${basedir}/core/src/main/resources/wrapperHashes2.json</wrapperHashesJsonFile>

                    <tagName>v${project.version}</tagName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>versions-maven-plugin</artifactId>
                <version>2.8.1</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M2</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${lombok.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
        </plugins>
    </build>


    <profiles>
        <profile>
            <id>SUREFIRE-1588</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
            </properties>
        </profile>
    </profiles>

    <properties>
        <maven.javadoc.skip>true</maven.javadoc.skip>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>

        <spring.boot.version>4.1.0</spring.boot.version>
        <spring.boot.devtools.version>4.1.0</spring.boot.devtools.version>
        <spring.boot.maven.version>4.1.0</spring.boot.maven.version>
        <spring.oxm.version>7.0.8</spring.oxm.version>
        <spring-data-commons.version>4.1.0</spring-data-commons.version>
        <jakarta.persistence-api.version>3.1.0</jakarta.persistence-api.version>
        <lombok.version>1.18.42</lombok.version>
        <logback.version>1.5.21</logback.version>
        <guava.version>23.0</guava.version>
        <junit.version>4.13.2</junit.version>
        <okhttp.version>4.11.0</okhttp.version>
        <logstash-logback-encoder.version>7.2</logstash-logback-encoder.version>
        <commons-lang3.version>3.12.0</commons-lang3.version>
        <commons-io.version>2.11.0</commons-io.version>
        <jaxb.sun.core.version>2.3.0.1</jaxb.sun.core.version>
        <jaxb.sun.impl.version>3.0.1</jaxb.sun.impl.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <uri-scheme-handler.version>2.0.0</uri-scheme-handler.version>
        <javers-core.version>6.8.1</javers-core.version>
    </properties>


</project>
